tests/zrun/good/ex15.zls
let node f(i1, i2) returns (o1, o2)
  do o1 = i1 + 1 and o2 = i2 + 1 done

let node main() returns (o1, o2)
  (o1, o2) = f(0 fby o1, 1)
    
